# libuniversesim

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yaml
include/universesim/: base.h  id.h  types.h  universesim.h
src/: container.c  container.h  core.c  log.c  log.h  planet.c  planet.h
tests/: test_system.c
